# candle

candle-core/src/: lib.rs
candle-core/src/cuda_backend/: mod.rs
candle-core/src/quantized/: cuda.rs
candle-examples/examples/quantized-qwen3_5/: main.rs
candle-examples/examples/qwen/: main.rs
candle-flash-attn-v3/tests/: flash_attn_tests.rs
candle-kernels/: Cargo.toml  build.rs
candle-kernels/src/: adaptive.rs  sort.cu  ternary.cu  unary.cu
candle-kernels/src/moe/: moe_wmma.cu
candle-nn/src/: moe.rs
candle-nn/tests/: ops.rs
candle-transformers/src/models/: mod.rs  quantized_qwen3_5.rs  qwen3.rs  qwen3_5.rs
candle-transformers/tests/: qwen_bf16_test.rs
